--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@types/react-dom": "^19.2.3",
 		"@vitejs/plugin-react": "^5.1.1",
 		"globals": "^16.5.0",
+		"sass-embedded": "^1.97.2",
 		"typescript": "~5.9.3",
 		"vite": "^7.2.4"
 	}
