add TheMain widget

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"check:ci": "biome ci"
 	},
 	"dependencies": {
+		"mobx": "^6.15.0",
+		"mobx-react-lite": "^4.1.1",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0"
 	},
